// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSubjectDataContainer renders correctly 1`] = `
<SubjectDataContainer
  activeTab=""
  dispatch={[Function]}
  menuVisible={false}
  onMenuClick={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
  tabs={Array []}
>
  Testando...
</SubjectDataContainer>
`;

exports[`UnconnectedSubjectDataContainer renders correctly when \`activeTab\` is set 1`] = `
<SidebarPushable
  as={[Function]}
  attached="bottom"
  className="subject-data-container"
>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  >
    <MenuItem
      active={true}
      key="1"
      onClick={[Function]}
      tabid="1"
    >
      Test
    </MenuItem>
  </Sidebar>
  <SidebarPusher
    dimmed={false}
    style={
      Object {
        "overflowY": "auto",
      }
    }
  >
    Testando...
  </SidebarPusher>
</SidebarPushable>
`;

exports[`UnconnectedSubjectDataContainer renders correctly when \`menuVisible\` is false 1`] = `
<SidebarPushable
  as={[Function]}
  attached="bottom"
  className="subject-data-container"
>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  />
  <SidebarPusher
    dimmed={false}
    style={
      Object {
        "overflowY": "auto",
      }
    }
  >
    Testando...
  </SidebarPusher>
</SidebarPushable>
`;

exports[`UnconnectedSubjectDataContainer renders correctly when \`menuVisible\` is true 1`] = `
<SidebarPushable
  as={[Function]}
  attached="bottom"
  className="subject-data-container"
>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  />
  <SidebarPusher
    dimmed={true}
    style={
      Object {
        "overflowY": "auto",
      }
    }
  >
    Testando...
  </SidebarPusher>
</SidebarPushable>
`;

exports[`UnconnectedSubjectDataContainer renders correctly when \`tabs\` is empty 1`] = `
<SidebarPushable
  as={[Function]}
  attached="bottom"
  className="subject-data-container"
>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  />
  <SidebarPusher
    dimmed={false}
    style={
      Object {
        "overflowY": "auto",
      }
    }
  >
    Testando...
  </SidebarPusher>
</SidebarPushable>
`;

exports[`UnconnectedSubjectDataContainer renders correctly when \`tabs\` is not empty 1`] = `
<SidebarPushable
  as={[Function]}
  attached="bottom"
  className="subject-data-container"
>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  >
    <MenuItem
      active={false}
      key="1"
      onClick={[Function]}
      tabid="1"
    >
      Test
    </MenuItem>
  </Sidebar>
  <SidebarPusher
    dimmed={false}
    style={
      Object {
        "overflowY": "auto",
      }
    }
  >
    Testando...
  </SidebarPusher>
</SidebarPushable>
`;
